--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,14 @@
       ]
     }
   ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "www.ambigramgenerator.me" }],
+      "destination": "https://ambigramgenerator.me/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/", "destination": "/index.html" }
   ]
